--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -8,6 +8,10 @@ body {
   background: #e5e5e5;
 }
 
+li a {
+  padding: 5px;
+}
+
 a {
   text-decoration: none;
 }
@@ -19,8 +23,6 @@ header {
   width: 100vw;
   border-bottom-left-radius: 100px;
 }
-
-
 
 /* Header */
 .home {
@@ -51,34 +53,16 @@ li {
   list-style: none;
 }
 
-a {
-  text-decoration: none;
-}
-
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 1rem ;
-}
-
-.nav-menu {
-  position:fixed;
-  left: -120%;
-  top: 70px;
-  gap: 0;
-  flex-direction: column;
-  background-color: #6070FF;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-}
-
-.nav-menu.active {
-  left: 0;
+  padding: 0 1rem;
 }
 
 .hamburger {
+  position: fixed;
+  right: 1.5rem;
   cursor: pointer;
 }
 
@@ -87,21 +71,69 @@ a {
   width: 25px;
   height: 3px;
   margin: 5px auto;
-  background-color: blue;
+  background-color: #6070ff;
 }
 
-.hamburger.active .bar:nth-child(2){
+/* --- active class --- */
+.nav-menu {
+  position: fixed;
+  left: -120%;
+  top: 0;
+  gap: 0;
+  flex-direction: column;
+  background-color: #6070ff;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  z-index: 1;
+  opacity: 0.9;
+}
+
+.nav-menu.active {
+  left: 0;
+  display: flex;
+  align-items: flex-start;
+  padding: 5rem 2rem;
+  gap: 1rem;
+}
+
+.nav-item a {
+  color: #fff;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 44px;
+  z-index: 2;
+  opacity: 10;
+}
+
+.bars.active {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: white;
+  padding: 0 3vw;
+  z-index: 1;
+}
+
+.hamburger.active .bar:nth-child(2) {
   opacity: 0;
 }
 
-.hamburger.active .bar:nth-child(1){
+.hamburger.active .bar:nth-child(1) {
   transform: translateY(8px) rotate(45deg);
+  background-color: white;
 }
 
-.hamburger.active .bar:nth-child(3){
+.hamburger.active .bar:nth-child(3) {
   transform: translateY(-8px) rotate(-45deg);
+  background-color: white;
 }
-/* ----------- Navbar end ---------------*/
+
+.hamburger.active {
+  z-index: 2;
+}
+
+/* ----------- Navbar end --------------- */
 
 .logo {
   font-family: "Poppins", sans-serif;
@@ -239,10 +271,6 @@ ul {
 .no_bullet {
   padding: 0;
   list-style-type: none;
-}
-
-li a {
-  padding: 5px;
 }
 
 /* -------------- works section ------------ */
