--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -465,6 +465,9 @@ h2 {
   margin-top: 2vw;
 }
 
+/* ------ Popup ------ */
+
+
 /* --------------- about my self --------- */
 .about_myself {
   /* Base about my self */
