--- a/styles/work-popup.css
+++ b/styles/work-popup.css
@@ -7,6 +7,7 @@
   width: 90vw;
   height: 90vh;
   overflow-y: scroll;
+  overflow-x: hidden;
   border-radius: 10px;
   filter: blur(0);
 }
@@ -28,8 +29,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 95%;
-  margin: 0 auto;
+  width: 90%;
+  margin: 0;
+  margin-top: 2%;
 }
 
 .modal-head h2 {
@@ -45,8 +47,8 @@
 }
 
 .listPop {
-  gap : 0;
-  margin : 2rem;
+  gap: 0;
+  margin: 2rem;
 }
 
 .modal-image {
@@ -54,7 +56,7 @@
 }
 
 .modal-image img {
-  width: 100%;
+  width: 90%;
 }
 
 .modal-description {
@@ -120,7 +122,7 @@
 
 @media only screen and (max-width: 992px) {
   .modal {
-    background:white;
+    background: white;
     backdrop-filter: blur(8px);
     position: fixed;
     overflow-y: scroll;
@@ -151,22 +153,19 @@
     gap: 5%;
     margin: 0;
     margin-bottom: 2%;
-  
   }
-
-
 
   .modal-image {
     margin: 0 0;
   }
 
   .modal-image img {
-    width: 100%;
+    width: 90%;
     height: 181px;
   }
 
   .modal-description {
-    width: 100%;
+    width: 90%;
     margin: 0;
   }
 
