.btn-effect added for popup button style in work-popup.css

--- a/styles/work-popup.css
+++ b/styles/work-popup.css
@@ -120,6 +120,10 @@
   width: 14px;
 }
 
+.btn-effect {
+  text-align: center;
+  width: 200px;
+}
 @media only screen and (max-width: 992px) {
   .modal {
     background: white;
@@ -211,5 +215,9 @@
   .modal-btns button {
     height: 35px;
     padding: 5px 5px;
+  }
+  .btn-effect {
+    text-align: center;
+    width: 200px;
   }
 }
