--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -6,7 +6,7 @@
 
   header {
     display: flex;
-    width: 100vw;
+    flex-direction: column;
     height: 916px;
     border-bottom-left-radius: 100px;
   }
@@ -36,7 +36,6 @@
     grid-auto-flow: row;
     justify-content: space-between;
     align-content: flex-start;
-    width: 100%;
     align-items: center;
     padding: 0 10vw;
     height: 5rem;
