--- a/styles/work-popup.css
+++ b/styles/work-popup.css
@@ -96,6 +96,7 @@
   display: flex;
   justify-content: space-evenly;
   margin-bottom: 7%;
+  gap: 10px
 }
 
 .modal-btns button a {
@@ -201,7 +202,7 @@
 
   .modal-technologies li:last-child,
   .modal-technologies li:nth-last-child(2) {
-    display: none;
+    display: block;
   }
 
   .modal-btns {
@@ -217,7 +218,7 @@
     min-height: 45px;
     block-size: fit-content;
     padding: 5px 5px;
-    max-width: 100px;
+    max-width: 150px;
   }
 
   .btn-effect {
