--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -52,8 +52,6 @@ header {
 .header{
   display: flex;
   justify-content: space-between;
-  position: fixed;
-  align-items: center;
 }
 
 li {
@@ -61,10 +59,9 @@ li {
 }
 
 .navbar {
-  display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 1rem;
+  padding: 0 5%;
 }
 
 .hamburger {
