Validate form done

--- a/images/popup/Portfolio_mobile_files/mobile.css
+++ b/images/popup/Portfolio_mobile_files/mobile.css
@@ -738,7 +738,7 @@ h2 {
 
 @media screen and (min-width: 992px) {
   #error {
-    display: none;
-    justify-content: center;
+    align-items :center;
+
   }
 }
