--- a/styles/popup-work.css
+++ b/styles/popup-work.css
@@ -22,6 +22,10 @@
   padding: 18px 5%;
 }
 
+.modal-head img {
+  width: 100%;
+}
+
 .modal-top {
   display: flex;
   align-items: center;
@@ -62,6 +66,10 @@
   gap: 10px;
 }
 
+.pop_btn a {
+  color : #6070ff;
+}
+
 #overlay {
   position: fixed;
   opacity: 1;
@@ -74,6 +82,7 @@
   mix-blend-mode: multiply;
   pointer-events: all;
 }
+
 
 /* Desktop version */
 @media screen and (min-width: 992px) {
