--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -11,10 +11,6 @@
     border-bottom-left-radius: 100px;
   }
 
-  .logo {
-    font-size: xx-large;
-  }
-
   .bars {
     display: none;
   }
@@ -37,32 +33,29 @@
   /* ------- Navbar START -------- */
   .navbar {
     background-color: white;
-    position: fixed;
-    width: 80%;
-    padding: 1rem 10%;
+    width: 100%;
     height: 3rem;
   }
   
   .header {
     align-self: center;
-    gap: 40vw;
   }
 
   .logo {
     display: flex;
     justify-content: flex-start;
-    width: max-content;
+    width: 20rem;
   }
 
   .nav-menu {
     position: static;
     left: 0;
     top: 0;
-    gap: 5rem;
     display: flex;
+    justify-content: flex-end;
     flex-direction: row;
+    gap: 2rem;
     background-color: white;
-    width: auto;
     text-align: center;
   }
 
@@ -105,12 +98,13 @@
     position: static;
     left: 0;
     order: 1;
+    margin: 0;
   }
 
   .contacts {
     position: static;
     top: 0;
-    padding-top: 24px;
+    padding: 24px 0;
     order: 1;
   }
 
