--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -51,17 +51,16 @@ header {
 
 .navbar {
   background: white;
-  position: fixed;
   display: flex;
   align-items: center;
   padding: 0 5%;
-  width: 100vw;
 }
 
 .header {
   display: flex;
   justify-content: space-between;
-  gap: 60vw;
+  width: 100%;
+  margin: 1rem 0;
 }
 
 li {
@@ -239,9 +238,8 @@ p {
 .connect {
   display: flex;
   align-self: flex-start;
-  position: absolute;
   height: 24px;
-  top: 460px;
+  margin: 1rem 0;
 
   /* Body / 2 - Bolder */
 
@@ -267,8 +265,7 @@ p {
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-between;
-  position: absolute;
-  top: 500px;
+  padding: 0.5rem 0;
 }
 
 ul {
@@ -282,9 +279,10 @@ ul {
 }
 
 /* -------------- works section ------------ */
+
 .works {
   /* Auto Layout */
-  display: grid;
+  display: flex;
   flex-direction: column;
   align-items: center;
   padding: 114px 5vw;
